@@ -57,7 +57,7 @@ namespace CIAO
 
       enum Value
       {
-        EC_l,RTEC_l,NOTIFY_l,RTNOTIFY_l,
+        EC_l, RTEC_l, NOTIFY_l, RTNOTIFY_l
       };
 
 
@@ -268,7 +268,7 @@ namespace CIAO
 
       enum Value
       {
-        CONJUNCTION_l,DISJUNCTION_l,LOGICAL_AND_l,NEGATE_l,
+        CONJUNCTION_l, DISJUNCTION_l, LOGICAL_AND_l, NEGATE_l
       };
 
 
